css/style.css
/* ... */
@media only screen and (min-width: 768px) {
	.omnisearch-output {
		max-width: 740px;
		min-width: 500px;
	}
}

/* *** */

.delete-icon.glyphicon {
	color: rgba(255, 255, 255, 0.7);
	cursor: pointer;
	font-size: 12px;
	padding: 2px;
	margin-left: auto;
	top: 0;
}

/* hoverbox */
.hoverbox {
	position: fixed;
	max-width: 600px;
	z-index: 200;
	box-shadow: 0 0 12px 0 rgba(0, 0, 0, 1);
	max-height: 100vh;
	overflow-y: auto;
}

.hoverbox::-webkit-scrollbar-track {
	background: #a0a0a0;
}

.hoverbox::-webkit-scrollbar {
	width: 4px;
}

.hoverbox > table.stats {
	border-radius: 0;
}

.hoverbox th.name {
	font-size: 1.6em;
}

.hoverbox p {
	margin-bottom: 5px;
}

.hoverbox .hoverborder {
	min-height: 3px;
	max-height: 16px;
	text-align: right;
}

.hoverbox .hoverborder.top {
	cursor: move;
	user-select: none;
	display: flex;
	justify-content: space-between;
}

.hoverbox .hoverborder .glyphicon {
	display: none;
}

.hoverbox .hoverborder[data-perm=true] .glyphicon {
	display: block;
}

.hoverbox .hoverborder .window-title {
	font-size: 12px;
	padding: 1px 0;
	display: none;
	font-family: 'Andada', serif;
	font-variant: small-caps;
	text-transform: uppercase;
	font-weight: bold;
	margin-left: 4px;
	flex-shrink: 0;
}

.hoverbox .hoverborder[data-display-title=true] .window-title {
	display: block;
}

.hoverborder[data-display-title=true] ~ table.stats,
.hoverborder[data-display-title=true] ~ .hoverborder {
	display: none;
}

.hoverbox td div.border {
	height: 2px;
	background-color: #922610;
	margin: 0 3px;
	padding: 0;
	border-right: 5px transparent;
}

.summary-flexer {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
	align-items: flex-start;
	align-content: flex-start;
}

/* *** */

/* homebrew manager */

.homebrew-overlay {
	position: fixed;
	z-index: 1000;
	background-color: rgba(69, 69, 69, 0.51);
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
}

.homebrew-window {
	position: relative;
	margin: 60px auto;
	padding: 5px 10px;
	max-height: 600px;
	max-width: 600px;
	overflow-y: scroll;
	z-index: 10001;
	float: none;
	top: initial;
	left: initial;
}

.homebrew-window hr {
	margin: 5px 0;
}

/* *** */

.view-col {
	margin: 7px 7px 12px;
	flex: 1;
	position: relative;
}

#listcontainer.view-col {
	display: flex;
	flex-flow: column nowrap;
}

#contentwrapper.view-col {
	overflow-y: auto;
}

main {
	padding: 10px 15px;
}

footer {
	padding: 20px 15px;
	font-size: 90%;
}

.hidden {
	display: none;
}

.bold {
	font-weight: bold;
}

.italic {
	font-style: italic;
}

.float-end {
	float: none;
}

input.search {
	width: 62%;
}

form#filtertools {
	font-size: 0.8em;
}

form#filtertools select {
	margin: 1px;
}

form#filtertools small:hover {
	cursor: pointer;
}

#pointbuy input {
	margin: 2px;
	text-align: right;
	width: 3em;
}

#pointbuy input[type=number] {
	-moz-appearance: textfield;
}

.sortlabel {
	display: block;
}

ul.list {
	position: relative;
	list-style-type: none;
	padding-left: 0;
	height: 100%;
	overflow-y: auto;
	overflow-x: hidden;
	padding-top: 1em;
	clear: both;
	font-size: 0.8em;
}

ul.list li {
	padding: 1px;
	cursor: pointer;
	display: block;
	border-bottom: 1px solid #ddd;
	max-height: 3em;
	overflow-y: hidden;
}

ul.list li:hover {
	max-height: 100%;
}

ul.list li:active {
	color: white;
}

ul.list li span.name {
	font-weight: bold;
}

ul.list li span.level,
ul.list li span.classes,
ul.list li span.school {
	display: inline-block;
	text-transform: capitalize;
}

ul.list li:hover span {
	display: block;
}

th.name span.stats-name {
	float: left;
}

th.name span.stats-source {
	float: right;
}

.monster th.name span.source {
	position: relative;
	margin-right: 0.2em;
}

span.sourcePHB {
	color: #4a6898;
}

span.sourceDMG {
	color: purple;
}

span.sourceMM {
	color: green;
}

span.sourceSCAG {
	color: #76af76;
}

span.sourceVGM {
	color: grey;
}

span.sourceXGE {
	color: #ba7c00;
}

span.sourceHotDQ {
	color: #cc5800;
}

span.sourceRoT {
	color: #ff2900;
}

span.sourceCoS {
	color: purple;
}

span.sourceOotA {
	color: grey;
}

span.sourceSKT {
	color: darkcyan;
}

span.sourcePotA {
	color: blue;
}

span.sourceLMoP {
	color: lightgreen;
}

span.sourceTYP {
	color: red;
}

span.sourceEEPC {
	color: #57b6c6;
}

span.sourceBoLS-3pp {
	color: #513680;
}

table.stats,
table#statsprof {
	font-family: 'Convergence', sans-serif;
	border-radius: 10px;
	width: 100%;
	font-size: 0.9em;
	table-layout: fixed;
}

table.stats td,
table.stats th {
	padding: 1px 0.3em;
}

table.stats th {
	color: #922610;
}

table.stats span {
	vertical-align: top !important;
}

table.stats ul {
	margin: 0 0 10px;
	padding: 0 20px;
}

table.stats li {
	margin: 0 0 5px;
}

/* sub-tables */

table.stats table {
	width: 100%;
	margin-bottom: 5px;
}

table.stats table caption {
	font-weight: bold;
	font-size: 1.1em;
	padding: 0;
	margin-left: 5px;
}

th.border {
	height: 4px;
}

th.border-thin {
	height: 1px;
}

td.divider div {
	background: #922610;
	height: 2px;
	margin: 6px 0;
}

table.stats span.name {
	font-weight: bold;
}

td.typerarityattunement,
td.levelschoolritual {
	font-style: italic;
}

td.damageproperties {
	text-align: right;
}

table.stats td#typerarityattunement {
	color: black;
}

table.stats span.name {
	font-weight: bold;
}

tr.text > td {
	padding-bottom: 0.7em !important;
}

th#nameTable,
th#nameSummary,
th.name {
	font-size: 1.8em;
	font-family: 'Andada', serif;
	font-variant: small-caps;
	font-weight: 500;
	padding-left: 0.2em !important;
}

th#author {
	color: inherit;
	display: none;
	font-style: italic;
	font-size: 0.9em;
}

.monster th.name {
	padding-right: calc(5.1em + 2px);
}

table.stats td#sizetypealignment {
	font-style: italic;
	padding-right: 10em;
}

td#sizetypealignment span {
	font-weight: normal !important;
}

tr#abilitynames th {
	text-align: center;
	font-weight: bold;
}

tr#abilityscores td {
	text-align: center;
	width: 16%;
}

span.name {
	font-weight: bold;
}

tr.trait td p.spells {
	margin-bottom: 0;
}

tr.trait td table {
	margin: 10px 0;
}
/* ... */

